[package]
name = "kvs"
version = "0.1.0"
authors = ["Patrick Rogers <patrick@donotforget.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"