[package]
name = "kvs"
version = "0.1.0"
authors = ["Patrick Rogers <patrick@donotforget.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1.3"
rmp = "0.8.9"
rmp-serde = "0.14.2"
serde = "1.0.104"
thiserror = "1.0"
bincode = "1.2.1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"